[tool.poetry]
name = "msgbot"
version = "0.1.3"
description = "Python 实现的一个消息通知助手。可以使用钉钉群聊天机器人或者微信。"
authors = ["maida"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
